Fix title layout issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,23 @@
   padding: 20px;
 }
 
+.title-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .title {
   font-size: 3rem;
-  margin-bottom: 10px;
+  text-align: center;
+  padding: 0 0.5rem;
+  margin: 0;
+}
+
+.icon {
+  margin: 0;
 }
 
 .tagline {
@@ -18,6 +32,10 @@
 }
 
 @media screen and (max-width: 500px) {
+  .icon {
+    display: none;
+  }
+
   .tagline {
     display: none;
   }
